<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="maximedelange.csi_week_1_rebuild.Report"
    tools:showIn="@layout/activity_report">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1"
        android:background="#0f870a">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Picture"
            android:id="@+id/button2"
            android:background="#47e617" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GPS"
            android:id="@+id/button3"
            android:layout_marginLeft="150dp"
            android:background="#47e617" />

        <ImageView
            android:layout_width="225dp"
            android:layout_height="300dp"
            android:id="@+id/imageView2"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="-275dp"
            android:src="@mipmap/suspect" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Call"
            android:id="@+id/button4"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-150dp"
            android:layout_marginTop="150dp"
            android:background="#47e617" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:id="@+id/Back"
            android:layout_marginLeft="-225dp"
            android:layout_marginTop="450dp"
            android:background="#47e617" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Send"
            android:id="@+id/button6"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="450dp"
            android:background="#47e617" />
    </LinearLayout>

</RelativeLayout>
