<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="maximedelange.csi_week_1_rebuild.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0d6b22"
        android:backgroundTint="#f714992d"
        android:backgroundTintMode="src_in"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="350dip"
            android:layout_height="200dip"
            android:id="@+id/imageView"
            android:src="@mipmap/suspect"
            android:contentDescription="Suspect" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="bottom"
            android:background="#807272"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="400px"
            android:layout_marginLeft="-700px">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="30dp"
                    android:text="@string/Name"
                    android:textSize="30sp"
                    android:id="@+id/textView"
                    android:layout_gravity="center_vertical"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="30dp"
                    android:text="@string/Gender"
                    android:textSize="30sp"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:clickable="true" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="30dp"
                    android:text="@string/Age"
                    android:textSize="30sp"
                    android:id="@+id/textView3"
                    android:clickable="true" />/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="30dp"
                    android:text="@string/Bounty"
                    android:textSize="30sp"
                    android:id="@+id/textView4"
                    android:clickable="true" />/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="90dp">

                <ScrollView
                    android:layout_width="361dp"
                    android:layout_height="90dp"
                    android:id="@+id/scrollView" >

                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="30dp"
                        android:text="@string/Description"
                        android:textSize="20sp"
                        android:id="@+id/textView5"
                        android:clickable="true" />
                </ScrollView><![CDATA[













                />






            ]]>
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Report"
                    android:id="@+id/Report"
                    android:layout_column="10"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#156617" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
